--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
     "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
+    "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^5.4.449",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.3.0",
