Update Dockerfile to use Node 25, add FAST_API_URL to .env.example, implement API rewrites in next.config.js, and remove deprecated convert-pdf API. Update deployment workflow to pull latest Docker image and set environment variables accordingly.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,9 @@
       "extensions": [
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
-        "bradlc.vscode-tailwindcss"
+        "bradlc.vscode-tailwindcss",
+        "ms-azuretools.vscode-docker",
+        "github.vscode-github-actions"
       ],
       "settings": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
@@ -28,4 +30,3 @@
   },
   "remoteUser": "node"
 }
-
