--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }},${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          build-args: |
+            FAST_API_URL=${{ secrets.FAST_API_URL }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
