--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
 ## Add your env variables here, this repo does not require any
 FAST_API_URL=https://your-backend-url.com
+
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/saas_db
+
+
+
+# NextAuth Configuration
+# Generate a new secret with: openssl rand -base64 32
+NEXTAUTH_SECRET=your-nextauth-secret-here
+# For production, use your actual domain. For development, this is optional.
+NEXTAUTH_URL=http://localhost:3000
