Update build script in package.json to include Prisma commands for generating and deploying migrations before building the Next.js application.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Nextjs Saas Starter Template",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "eslint .",
     "db:generate": "prisma generate",
