Add Google OAuth support for authentication and update sign-in/sign-up pages. Enhance user experience with Google sign-in options and update environment variables for Google credentials. Modify User model to allow optional password for OAuth users.

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ DATABASE_URL=postgresql://postgres:postgres@postgres:5432/saas_db
 NEXTAUTH_SECRET=your-nextauth-secret-here
 # For production, use your actual domain. For development, this is optional.
 NEXTAUTH_URL=http://localhost:3000
+
+
+
+GOOGLE_CLIENT_ID=yourcode
+GOOGLE_CLIENT_SECRET=yourcode
