--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ NEXTAUTH_URL=http://localhost:3000
 
 GOOGLE_CLIENT_ID=yourcode
 GOOGLE_CLIENT_SECRET=yourcode
+
+
+
+
+NEXT_PUBLIC_LICENSE_KEY_URL=https://your-license-key-purchase-url.com
