tag event deposit and sign up

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ GOOGLE_CLIENT_SECRET=yourcode
 
 
 NEXT_PUBLIC_LICENSE_KEY_URL=https://your-license-key-purchase-url.com
+
+NEXT_PUBLIC_GTM_ID=GTM-P3DRKL5Z
