--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,5 @@ GOOGLE_CLIENT_SECRET=yourcode
 NEXT_PUBLIC_LICENSE_KEY_URL=https://your-license-key-purchase-url.com
 
 NEXT_PUBLIC_GTM_ID=GTM-P3DRKL5Z
+
+GROQ_API_KEY=your-groq-api-key-here
