--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,12 @@ GOOGLE_CLIENT_SECRET=yourcode
 
 
 
-NEXT_PUBLIC_LICENSE_KEY_URL=https://your-license-key-purchase-url.com
+# Gumroad: monthly subscription
+NEXT_PUBLIC_GUMROAD_SUBSCRIPTION_URL=https://your-product.gumroad.com/l/your-monthly-slug
+
+GUMROAD_PRODUCT_ID=your-product-id-here
+
+
 
 NEXT_PUBLIC_GTM_ID=GTM-P3DRKL5Z
-
 GROQ_API_KEY=your-groq-api-key-here
