--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.8",
+    "ngrok": "^5.0.0-beta.2",
     "postcss": "^8.4.47",
     "prisma": "^7.3.0",
     "tailwindcss": "^4.1.17",
