--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,34 @@
 ## Add your env variables here, this repo does not require any
-FAST_API_URL=https://your-backend-url.com
+FAST_API_URL="https://your-backend-url.com"
 
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/saas_db
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/saas_db"
 
 
 
 # NextAuth Configuration
 # Generate a new secret with: openssl rand -base64 32
-NEXTAUTH_SECRET=your-nextauth-secret-here
+NEXTAUTH_SECRET="your-nextauth-secret-here"
 # For production, use your actual domain. For development, this is optional.
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL="http://localhost:3000"
 
 
 
-GOOGLE_CLIENT_ID=yourcode
-GOOGLE_CLIENT_SECRET=yourcode
+GOOGLE_CLIENT_ID="yourcode"
+GOOGLE_CLIENT_SECRET="yourcode"
 
 
 
 
-# Gumroad: monthly subscription
-NEXT_PUBLIC_GUMROAD_SUBSCRIPTION_URL=https://your-product.gumroad.com/l/your-monthly-slug
+# Gumroad: monthly ($10) and annual ($80) subscriptions
+NEXT_PUBLIC_GUMROAD_SUBSCRIPTION_URL="https://managepdf.gumroad.com/l/jgwzb?wanted=true"
+NEXT_PUBLIC_GUMROAD_ANNUAL_URL="https://managepdf.gumroad.com/l/pmrxr?wanted=true"
+# Webhook: product IDs from Gumroad (to map webhooks to monthly vs annual)
+GUMROAD_PRODUCT_ID_MONTHLY="your-monthly-product-id"
+GUMROAD_PRODUCT_ID_YEARLY="your-annual-product-id"
+# Optional: verify webhook signatures
+# GUMROAD_WEBHOOK_SECRET="your-gumroad-webhook-secret"
 
-GUMROAD_PRODUCT_ID=your-product-id-here
 
 
-
-NEXT_PUBLIC_GTM_ID=GTM-P3DRKL5Z
-GROQ_API_KEY=your-groq-api-key-here
+NEXT_PUBLIC_GTM_ID="GTM-P3DRKL5Z"
+GROQ_API_KEY="your-groq-api-key-here"
