Add Resend integration for welcome and payment success emails; update environment variables and Docker configuration

--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,10 @@ GUMROAD_PRODUCT_ID_YEARLY="your-annual-product-id"
 
 
 
+# Resend: welcome emails on signup
+RESEND_API_KEY="re_xxxxxxxxxxxx"
+# Optional: from address (must be verified in Resend). Default: onboarding@resend.dev
+RESEND_FROM_EMAIL="noreply@managepdf.site"
+
 NEXT_PUBLIC_GTM_ID="GTM-P3DRKL5Z"
 GROQ_API_KEY="your-groq-api-key-here"
