--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.3.0",
+    "resend": "^6.9.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
