switch to stripe

--- a/.env.example
+++ b/.env.example
@@ -19,14 +19,11 @@ GOOGLE_CLIENT_SECRET="yourcode"
 
 
 
-# Gumroad: monthly ($10) and annual ($80) subscriptions
-NEXT_PUBLIC_GUMROAD_SUBSCRIPTION_URL="https://managepdf.gumroad.com/l/jgwzb?wanted=true"
-NEXT_PUBLIC_GUMROAD_ANNUAL_URL="https://managepdf.gumroad.com/l/pmrxr?wanted=true"
-# Webhook: product IDs from Gumroad (to map webhooks to monthly vs annual)
-GUMROAD_PRODUCT_ID_MONTHLY="your-monthly-product-id"
-GUMROAD_PRODUCT_ID_YEARLY="your-annual-product-id"
-# Optional: verify webhook signatures
-# GUMROAD_WEBHOOK_SECRET="your-gumroad-webhook-secret"
+# Stripe: subscriptions (create Price IDs in Stripe Dashboard)
+STRIPE_SECRET_KEY="sk_test_..."
+STRIPE_WEBHOOK_SECRET="whsec_..."
+MONTHLY_PRICE="10"
+ANNUAL_PRICE="80"
 
 
 
