--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@ngrok/ngrok": "^1.7.0",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -36,6 +37,7 @@
     "react-dom": "^19.2.1",
     "react-icons": "^5.3.0",
     "resend": "^6.9.2",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -47,7 +49,6 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.8",
-    "ngrok": "^5.0.0-beta.2",
     "postcss": "^8.4.47",
     "prisma": "^7.3.0",
     "tailwindcss": "^4.1.17",
