Update branding and environment configurations to reflect transition from Manage PDF to Anycode; modify API keys and descriptions for enhanced clarity and functionality.

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,10 @@ ANNUAL_PRICE="80"
 # Resend: welcome emails on signup
 RESEND_API_KEY="re_xxxxxxxxxxxx"
 # Optional: from address (must be verified in Resend). Default: onboarding@resend.dev
-RESEND_FROM_EMAIL="noreply@managepdf.site"
+RESEND_FROM_EMAIL="noreply@anycode.it"
 
 NEXT_PUBLIC_GTM_ID="GTM-P3DRKL5Z"
-GROQ_API_KEY="your-groq-api-key-here"
+
+# OpenAI: image-to-prompt (vision) and summarize-pdf
+OPENAI_API_KEY="sk-..."
+# Optional: OPENAI_MODEL for summarize (default gpt-4o-mini)
