--- a/.env.example
+++ b/.env.example
@@ -27,10 +27,16 @@ ANNUAL_PRICE="80"
 
 
 
-# Resend: welcome emails on signup
-RESEND_API_KEY="re_xxxxxxxxxxxx"
-# Optional: from address (must be verified in Resend). Default: onboarding@resend.dev
-RESEND_FROM_EMAIL="noreply@anycode.it"
+# SMTP: mail server for welcome and transactional emails
+SMTP_HOST="smtp.example.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="your-smtp-user"
+SMTP_PASSWORD="your-smtp-password"
+# Optional: from address. Default: SMTP_USER or noreply@anycode.it
+SMTP_FROM_EMAIL="noreply@anycode.it"
+
+
 
 NEXT_PUBLIC_GTM_ID="GTM-P3DRKL5Z"
 
