--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.3.0",
-    "resend": "^6.9.2",
+    "nodemailer": "^7.0.7",
     "stripe": "^20.3.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
